Add style files. Add ready lightbox script

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <a href="https://www.instagram.com/paint_for_the_paint_god/"><i class="fab fa-instagram fa-2x"></i></a>
         <a href="https://elminsnerdcave.wordpress.com/"><i class="fab fa-wordpress-simple fa-2x"></i></a>
         </div>
-      <p>Copyright &copy; 2020</p>
+      <p>Copyright &copy; 2022</p>
     </footer>
 
     <script
@@ -294,6 +294,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/lightbox.min.js"></script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
